clean 2015 slight edits

--- a/06G_clean_ppcs_2015.html
+++ b/06G_clean_ppcs_2015.html
@@ -1825,7 +1825,7 @@ ppcs_2015 &lt;- ppcs_2015 %&gt;%
          num_face_to_face,
          face_to_face
   )</code></pre>
-<pre class="r"><code>save(ppcs_2015, file = &#39;ppcs_2015.RData&#39;)</code></pre>
+<pre class="r"><code>save(ppcs_2015, file = &#39;clean_data/ppcs_2015.RData&#39;)</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 3.6.0 (2019-04-26)
 ## Platform: x86_64-w64-mingw32/x64 (64-bit)
