--- a/06A_clean_ppcs_1996.html
+++ b/06A_clean_ppcs_1996.html
@@ -186,11 +186,12 @@ summary {
 
 <div id="load-libraries" class="section level1">
 <h1>Load Libraries</h1>
-<pre class="r"><code>library(tidyverse)</code></pre>
+<pre class="r"><code>library(pacman)
+library(tidyverse)</code></pre>
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✔ ggplot2 3.2.1     ✔ purrr   0.3.3
-## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
-## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
+## ✔ tibble  2.1.3     ✔ dplyr   0.8.4
+## ✔ tidyr   1.0.2     ✔ stringr 1.4.0
 ## ✔ readr   1.3.1     ✔ forcats 0.4.0</code></pre>
 <pre><code>## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
@@ -313,9 +314,12 @@ is_not_missing &lt;- Vectorize(is_not_missing)
 
 ppcs_1996_tmp &lt;- ppcs_1996 %&gt;%
   mutate_at(vars(columns), is_not_missing) %&gt;%
-  select(columns)
-
-ppcs_1996 &lt;- ppcs_1996 %&gt;%
+  select(columns)</code></pre>
+<pre><code>## Note: Using an external vector in selections is ambiguous.
+## ℹ Use `all_of(columns)` instead of `columns` to silence this message.
+## ℹ See &lt;https://tidyselect.r-lib.org/reference/faq-external-vector.html&gt;.
+## This message is displayed once per session.</code></pre>
+<pre class="r"><code>ppcs_1996 &lt;- ppcs_1996 %&gt;%
   mutate(row_sum = rowSums(ppcs_1996_tmp)) %&gt;%
   mutate(civilian_behavior = case_when(
     (row_sum &gt; 0) ~ 1,
@@ -429,12 +433,12 @@ ppcs_1996 &lt;- ppcs_1996 %&gt;%
 <h1>Save Data</h1>
 <pre class="r"><code>save(ppcs_1996, file='clean_data/ppcs_1996.RData')
 sessionInfo()</code></pre>
-<pre><code>## R version 3.4.4 (2018-03-15)
+<pre><code>## R version 3.6.2 (2019-12-12)
 ## Platform: x86_64-pc-linux-gnu (64-bit)
-## Running under: Ubuntu 18.04.3 LTS
+## Running under: Ubuntu 18.04.4 LTS
 ## 
 ## Matrix products: default
-## BLAS: /usr/lib/x86_64-linux-gnu/blas/libblas.so.3.7.1
+## BLAS:   /usr/lib/x86_64-linux-gnu/blas/libblas.so.3.7.1
 ## LAPACK: /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.7.1
 ## 
 ## locale:
@@ -444,31 +448,30 @@ sessionInfo()</code></pre>
 ## [10] LC_TELEPHONE=C         LC_MEASUREMENT=C.UTF-8 LC_IDENTIFICATION=C   
 ## 
 ## attached base packages:
-## [1] stats     graphics  grDevices utils     datasets  base     
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
 ##  [1] here_0.1               asciiSetupReader_2.3.0 forcats_0.4.0         
-##  [4] stringr_1.4.0          dplyr_0.8.3            purrr_0.3.3           
-##  [7] readr_1.3.1            tidyr_1.0.0            tibble_2.1.3          
-## [10] ggplot2_3.2.1          tidyverse_1.3.0       
+##  [4] stringr_1.4.0          dplyr_0.8.4            purrr_0.3.3           
+##  [7] readr_1.3.1            tidyr_1.0.2            tibble_2.1.3          
+## [10] ggplot2_3.2.1          tidyverse_1.3.0        pacman_0.5.1          
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] zoo_1.8-7         tidyselect_0.2.5  xfun_0.11         haven_2.2.0      
-##  [5] lattice_0.20-35   colorspace_1.4-1  vctrs_0.2.1       generics_0.0.2   
-##  [9] htmltools_0.4.0   yaml_2.2.0        rlang_0.4.2       pillar_1.4.3     
-## [13] withr_2.1.2       glue_1.3.1        DBI_1.1.0         bit64_0.9-7      
-## [17] dbplyr_1.4.2      modelr_0.1.5      readxl_1.3.1      lifecycle_0.1.0  
-## [21] munsell_0.5.0     gtable_0.3.0      cellranger_1.1.0  rvest_0.3.5      
-## [25] evaluate_0.14     knitr_1.26        parallel_3.4.4    fansi_0.4.0      
-## [29] broom_0.5.3       methods_3.4.4     Rcpp_1.0.3        scales_1.1.0     
-## [33] backports_1.1.5   vroom_1.2.0       jsonlite_1.6      bit_1.1-15.1     
-## [37] fs_1.3.1          hms_0.5.2         digest_0.6.23     stringi_1.4.3    
-## [41] rprojroot_1.3-2   grid_3.4.4        cli_2.0.0         tools_3.4.4      
-## [45] magrittr_1.5      lazyeval_0.2.2    crayon_1.3.4      pkgconfig_2.0.3  
-## [49] zeallot_0.1.0     ellipsis_0.3.0    data.table_1.12.8 xml2_1.2.2       
-## [53] reprex_0.3.0      lubridate_1.7.4   assertthat_0.2.1  rmarkdown_2.0    
-## [57] httr_1.4.1        rstudioapi_0.10   R6_2.4.1          nlme_3.1-131     
-## [61] compiler_3.4.4</code></pre>
+##  [1] Rcpp_1.0.3        lubridate_1.7.4   lattice_0.20-38   zoo_1.8-7        
+##  [5] assertthat_0.2.1  rprojroot_1.3-2   digest_0.6.23     R6_2.4.1         
+##  [9] cellranger_1.1.0  backports_1.1.5   reprex_0.3.0      evaluate_0.14    
+## [13] httr_1.4.1        pillar_1.4.3      rlang_0.4.4       lazyeval_0.2.2   
+## [17] readxl_1.3.1      rstudioapi_0.10   data.table_1.12.8 rmarkdown_2.1    
+## [21] bit_1.1-15.1      munsell_0.5.0     broom_0.5.4       compiler_3.6.2   
+## [25] modelr_0.1.5      xfun_0.12         pkgconfig_2.0.3   htmltools_0.4.0  
+## [29] tidyselect_1.0.0  fansi_0.4.1       crayon_1.3.4      dbplyr_1.4.2     
+## [33] withr_2.1.2       grid_3.6.2        nlme_3.1-143      jsonlite_1.6.1   
+## [37] gtable_0.3.0      lifecycle_0.1.0   DBI_1.1.0         magrittr_1.5     
+## [41] scales_1.1.0      cli_2.0.1         stringi_1.4.5     vroom_1.2.0      
+## [45] fs_1.3.1          xml2_1.2.2        ellipsis_0.3.0    generics_0.0.2   
+## [49] vctrs_0.2.2       tools_3.6.2       bit64_0.9-7       glue_1.3.1       
+## [53] hms_0.5.3         parallel_3.6.2    yaml_2.2.1        colorspace_1.4-1 
+## [57] rvest_0.3.5       knitr_1.27        haven_2.2.0</code></pre>
 </div>
 
 
