--- a/06E_clean_ppcs_2008.html
+++ b/06E_clean_ppcs_2008.html
@@ -183,12 +183,13 @@ summary {
 
 <pre class="r"><code># load 2008 ppcs data
 
+library(pacman)
 library(readr)
 library(tidyverse)</code></pre>
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
-<pre><code>## ✔ ggplot2 3.2.1     ✔ dplyr   0.8.3
+<pre><code>## ✔ ggplot2 3.2.1     ✔ dplyr   0.8.4
 ## ✔ tibble  2.1.3     ✔ stringr 1.4.0
-## ✔ tidyr   1.0.0     ✔ forcats 0.4.0
+## ✔ tidyr   1.0.2     ✔ forcats 0.4.0
 ## ✔ purrr   0.3.3</code></pre>
 <pre><code>## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
@@ -389,12 +390,12 @@ ppcs_2008 &lt;- ppcs_2008 %&gt;%
 
 save(ppcs_2008, file = &quot;clean_data/ppcs_2008.Rdata&quot;)</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>## R version 3.4.4 (2018-03-15)
+<pre><code>## R version 3.6.2 (2019-12-12)
 ## Platform: x86_64-pc-linux-gnu (64-bit)
-## Running under: Ubuntu 18.04.3 LTS
+## Running under: Ubuntu 18.04.4 LTS
 ## 
 ## Matrix products: default
-## BLAS: /usr/lib/x86_64-linux-gnu/blas/libblas.so.3.7.1
+## BLAS:   /usr/lib/x86_64-linux-gnu/blas/libblas.so.3.7.1
 ## LAPACK: /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.7.1
 ## 
 ## locale:
@@ -404,28 +405,27 @@ save(ppcs_2008, file = &quot;clean_data/ppcs_2008.Rdata&quot;)</code></pre>
 ## [10] LC_TELEPHONE=C         LC_MEASUREMENT=C.UTF-8 LC_IDENTIFICATION=C   
 ## 
 ## attached base packages:
-## [1] stats     graphics  grDevices utils     datasets  base     
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] here_0.1        forcats_0.4.0   stringr_1.4.0   dplyr_0.8.3    
-##  [5] purrr_0.3.3     tidyr_1.0.0     tibble_2.1.3    ggplot2_3.2.1  
-##  [9] tidyverse_1.3.0 readr_1.3.1    
+##  [1] here_0.1        forcats_0.4.0   stringr_1.4.0   dplyr_0.8.4    
+##  [5] purrr_0.3.3     tidyr_1.0.2     tibble_2.1.3    ggplot2_3.2.1  
+##  [9] tidyverse_1.3.0 readr_1.3.1     pacman_0.5.1   
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] tidyselect_0.2.5 xfun_0.11        haven_2.2.0      lattice_0.20-35 
-##  [5] colorspace_1.4-1 vctrs_0.2.1      generics_0.0.2   htmltools_0.4.0 
-##  [9] yaml_2.2.0       rlang_0.4.2      pillar_1.4.3     glue_1.3.1      
+##  [1] tidyselect_1.0.0 xfun_0.12        haven_2.2.0      lattice_0.20-38 
+##  [5] colorspace_1.4-1 vctrs_0.2.2      generics_0.0.2   htmltools_0.4.0 
+##  [9] yaml_2.2.1       rlang_0.4.4      pillar_1.4.3     glue_1.3.1      
 ## [13] withr_2.1.2      DBI_1.1.0        dbplyr_1.4.2     modelr_0.1.5    
 ## [17] readxl_1.3.1     lifecycle_0.1.0  munsell_0.5.0    gtable_0.3.0    
-## [21] cellranger_1.1.0 rvest_0.3.5      evaluate_0.14    knitr_1.26      
-## [25] fansi_0.4.0      broom_0.5.3      methods_3.4.4    Rcpp_1.0.3      
-## [29] backports_1.1.5  scales_1.1.0     jsonlite_1.6     fs_1.3.1        
-## [33] hms_0.5.2        digest_0.6.23    stringi_1.4.3    rprojroot_1.3-2 
-## [37] grid_3.4.4       cli_2.0.0        tools_3.4.4      magrittr_1.5    
-## [41] lazyeval_0.2.2   crayon_1.3.4     pkgconfig_2.0.3  zeallot_0.1.0   
-## [45] xml2_1.2.2       reprex_0.3.0     lubridate_1.7.4  assertthat_0.2.1
-## [49] rmarkdown_2.0    httr_1.4.1       rstudioapi_0.10  R6_2.4.1        
-## [53] nlme_3.1-131     compiler_3.4.4</code></pre>
+## [21] cellranger_1.1.0 rvest_0.3.5      evaluate_0.14    knitr_1.27      
+## [25] fansi_0.4.1      broom_0.5.4      Rcpp_1.0.3       backports_1.1.5 
+## [29] scales_1.1.0     jsonlite_1.6.1   fs_1.3.1         hms_0.5.3       
+## [33] digest_0.6.23    stringi_1.4.5    rprojroot_1.3-2  grid_3.6.2      
+## [37] cli_2.0.1        tools_3.6.2      magrittr_1.5     lazyeval_0.2.2  
+## [41] crayon_1.3.4     pkgconfig_2.0.3  xml2_1.2.2       reprex_0.3.0    
+## [45] lubridate_1.7.4  assertthat_0.2.1 rmarkdown_2.1    httr_1.4.1      
+## [49] rstudioapi_0.10  R6_2.4.1         nlme_3.1-143     compiler_3.6.2</code></pre>
 
 
 
